--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
             "email": "me@stephencoakley.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=5.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Edmunds\\SDK\\": "src/"
+        }
+    }
 }
